--- a/07_Shop_MultiProduct/assets/stylesheet/style.css
+++ b/07_Shop_MultiProduct/assets/stylesheet/style.css
@@ -14485,3 +14485,4 @@ h1.divider:after, h2.divider:after, h3.divider:after, h4.divider:after, h5.divid
 .latest-blog2 img{
     height:100%;
 }
+.s-title,.s-title{text-align:center;font-size:12px;}
