--- a/10_Theme_09_v2/Views/Shared/_partial/_MainFooter_1.cshtml
+++ b/10_Theme_09_v2/Views/Shared/_partial/_MainFooter_1.cshtml
@@ -12,78 +12,41 @@
             <h2>Tư vấn thiết kế</h2>
         </div>
         <div class="container">
-            <ul>
-                <li>
-                    <div class="feature-box need-help">                      
-                        <div class="content"><a href="/tu-van-thiet-ke-phong-khach-b120">Tư vấn thiết kế phòng khách</a></div>
+            <div class="row clearfix">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 wrapper left">
+                        <div class="item-image">
+                            <div class="overlay"><div class="text"><span>Tư vấn thiết kế phòng khách</span></div></div>
+                            <img src="http://media.anpero.com/images/45/122017/22017121517065440.jpg" />
+                        </div>
                     </div>
-                </li>
-                <li>
-                    <div class="feature-box need-help">
-                        <div class="content"><a href="/tu-van-thiet-ke-phong-ngu-b122">Tư vấn thiết kế phòng ngủ</a></div>
+                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 wrapper left">
+                        <div class="item-image">
+                            <div class="overlay"><div class="text"><span>Tư vấn thiết kế phòng ngủ</span></div></div>
+                            <img src="http://media.anpero.com/images/45/122017/22017121517065440.jpg" />
+                        </div>
                     </div>
-                </li>
-                <li>
-                    <div class="feature-box need-help">
-                        <div class="content"><a href="/tu-van-thiet-ke-phong-an-b121">Tư vấn thiết kế phòng ăn</a></div>
+
+
+
+                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 wrapper left">
+                        <div class="item-image">
+                            <div class="overlay"><div class="text"><span>Tư vấn thiết kế phòng ăn</span></div></div>
+                            <img src="http://media.anpero.com/images/45/122017/22017121517065440.jpg" />
+                        </div>
                     </div>
-                </li>
-                <li class="last">
-                    <div class="feature-box need-help">
-                        <div class="content"><a href="/tu-van-thiet-ke-bep-dep-b123">Tư vấn thiết kế bếp đẹp</a></div>
+                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 wrapper left">
+                        <div class="item-image">
+                            <div class="overlay"><div class="text"><span>Tư vấn thiết kế bếp đẹp</span></div></div>
+                            <img src="http://media.anpero.com/images/45/122017/22017121517065440.jpg" />
+                        </div>
                     </div>
-                </li>
-            </ul>
+                </div>
+            </div>
         </div>
     </div>
     <footer>
-        <!-- BEGIN INFORMATIVE FOOTER -->
         <div class="footer-inner">
-            @*<div class="newsletter-row">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 col">
-                            <!-- Footer Payment Link -->
-                            <div class="payment-accept">
-                                <div>
-                                    <a href="/huong-dan-thanh-toan-khi-mua-hang-t-a85">
-                                        <img src="/assets/images/payment-1.png" alt="payment1"> 
-                                    </a>
-                                    <a href="/huong-dan-thanh-toan-khi-mua-hang-t-a85">
-                                        <img src="/assets/images/payment-2.png" alt="payment2">
-                                    </a>
-                                    <a href="/huong-dan-thanh-toan-khi-mua-hang-t-a85">
-                                        <img src="/assets/images/payment-3.png" alt="payment3"> 
-                                    </a>
-                                    <a href="/huong-dan-thanh-toan-khi-mua-hang-t-a85">
-                                        <img src="/assets/images/payment-4.png" alt="payment4">
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- Footer Newsletter -->
-                        <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12 col1">
-                            <div class="newsletter-wrap">
-                                <h4>Đăng ký</h4>
-                                <div id="newsletter-validate-detail1">
-                                    <div id="container_form_news">
-                                        <div id="container_form_news2">
-                                            <input type="text" name="email" id="newsletter1" title="Nhận thông tin khuyến mại." class="input-text required-entry validate-email" placeholder="Nhập địa chỉ email của bạn...">
-                                            <button type="submit" title="Đăng ký" class="button subscribe"><span>Đăng ký</span></button>
-                                        </div>
-                                        <!--container_form_news2-->
-                                    </div>
-                                    <!--container_form_news-->
-                                </div>
-
-                            </div>
-                            <!--newsletter-wrap-->
-                        </div>
-
-                    </div>
-                </div>
-                <!--footer-column-last-->
-            </div>*@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-4 col-xs-12 col-lg-4">
@@ -112,10 +75,6 @@
                                         }
                                         <li class="tw pull-left"><a target="_blank" rel="nofollow" href="http://www.twitter.com/share?url=@thisUrl" title="Twitter"></a></li>
                                         <li class="googleplus pull-left"><a target="_blank" rel="nofollow" href="https://plus.google.com/share?url=@thisUrl" title="GooglePlus"></a></li>
-                                        @*<li class="rss pull-left"><a target="_blank" rel="nofollow" href="#" title="RSS"></a></li>*@
-                                        @*<li class="pintrest pull-left"><a target="_blank" rel="nofollow" href="http://pinterest.com/pinthis?url=@thisUrl" title="PInterest"></a></li>*@
-                                        @*<li class="linkedin pull-left"><a target="_blank" rel="nofollow" href="#" title="Linkedin"></a></li>*@
-                                        @*<li class="youtube pull-left"><a target="_blank" rel="nofollow" href="#" title="Youtube"></a></li>*@
                                     }
                                 </ul>
                             </div>
@@ -140,7 +99,6 @@
                         <div class="footer-column">
                             <h4>Thông tin</h4>
                             <ul class="links">
-
                                 <li><a title="contact" href="/home/contact">Liên hệ</a></li>
                                 <li><a title="about" href="/about">Về chúng tôi</a></li>
                                 <li><a title="blog" href="/blog">Blogs</a></li>
@@ -178,9 +136,9 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-12 col-xs-12 coppyright">© 2016 @commonInfo.Name. All Rights Reserved. Power by <a href="http://anpero.com" title="thiết kế web quản lý bán hàng, thiết kế web chuyên nghiệp">Anpero</a></div>
-                </div>                
-            </div>            
-        </div>        
+                </div>
+            </div>
+        </div>
     </footer>
 </div>
 <div id="mobile-menu">
@@ -220,7 +178,7 @@
                 }
             </ul>
         </li>
-        @if(commonInfo.ProductGroupList!=null && commonInfo.ProductGroupList.Length > 0)
+        @if (commonInfo.ProductGroupList != null && commonInfo.ProductGroupList.Length > 0)
         {
             <li>
                 <a href="/search?category=0&keyword=">Phòng</a>
@@ -243,7 +201,7 @@
                     <ul>
                         @for (int i = 0; i < saleProduct.Length; i++)
                         {
-                            if ( i < 4)
+                            if (i < 4)
                             {
                                 <li><a href="@Anpero.StringHelpper.GetProductLink(saleProduct[i].PrName, saleProduct[i].Id)">@saleProduct[i].PrName</a></li>
                             }
@@ -264,32 +222,6 @@
         <li><a href="/home/contact">Liên hệ</a></li>
     </ul>
 </div>
-@*<div class="popup1" style="display: block;">
-
-    <div class="newsletter-sign-box">
-        <div class="newsletter">
-            <img src="/assets/images/close-icon.png" alt="close" class="x" onClick="HideMe();">
-            <div class="newsletter_img">
-                <img alt="newsletter" src="/assets/images/newsletter_img.png">
-            </div>
-            <form method="post" id="popup-newsletter" name="popup-newsletter" class="email-form">
-                <h3>Nhận thông tin khuyến mại</h3>
-
-                <h4>Nhập địa chỉ email của bạn để nhận thông tin khuyến mại của chúng tôi.</h4>
-                <div class="newsletter-form">
-                    <div class="input-box">
-                        <input type="text" name="email" id="newsletter2" title="Nhận thông tin khuyến mại" placeholder="Nhập địa chỉ email của bạn..." class="input-text required-entry validate-email">
-                        <button type="submit" title="Đăng ký" class="button subscribe"><span>Đăng ký</span></button>
-
-                    </div> <!--input-box-->
-                </div> <!--newsletter-form-->
-                <label class="subscribe-bottom"><input type="checkbox" name="notshowpopup" id="notshowpopup">Don’t show this popup again</label>
-            </form>
-
-        </div> <!--newsletter-->
-    </div> <!--newsletter-sign-box-->
-</div>*@
-@*<div id="fade" style="display: block;"></div>*@
 <div id="fb-root"></div>
 <script>
     (function (d, s, id) {
@@ -299,5 +231,5 @@
         js.src = "//connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v2.9";
         fjs.parentNode.insertBefore(js, fjs);
     }(document, 'script', 'facebook-jssdk'));
-   
+
 </script>
