--- a/10_Theme_09_v2/Views/Home/Index.cshtml
+++ b/10_Theme_09_v2/Views/Home/Index.cshtml
@@ -16,10 +16,10 @@
     <meta name="keywords" content="@ViewBag.Keywords" />
     <meta property="og:description" content="@commonInfo.Desc" />
     <meta property="og:title" content="@ViewBag.Title" />
-    <meta property="og:type" content="website" />   
-    <meta property="og:url" content="@ViewBag.WebsiteUrl" />  
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="@ViewBag.WebsiteUrl" />
     <meta property="og:image" content="@commonInfo.Logo" />
-<link rel="canonical" href="@ViewBag.WebsiteUrl" />
+    <link rel="canonical" href="@ViewBag.WebsiteUrl" />
 }
 
 <div class="content">
@@ -28,10 +28,10 @@
         <div class="container">
             <div class="row">
                 @Html.Partial("_partial/_HomeSlide_1")
-            </div>         
+            </div>
         </div>
-    }     
-  
+    }
+
     <section class="wow bounceInUp animated">
         <div class="best-pro slider-items-products container" style="margin-top: 50px;">
             <div class="new_title">
@@ -47,54 +47,54 @@
                         {
                             foreach (ProductItem item in bestSaleList.Item)
                             {
-                                <li class="item col-lg-3 col-md-3 col-sm-3 col-xs-6">
-                                    <div class="item-inner">
-                                        <div class="item-img">
-                                            <div class="item-img-info">
-                                                <a href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)" title="@item.PrName" class="product-image">
-                                                    <img src="@item.Images" alt="@item.PrName">
-                                                </a>
-                                                @if (item.IsSale)
+                    <li class="item col-lg-3 col-md-3 col-sm-3 col-xs-6">
+                        <div class="item-inner">
+                            <div class="item-img">
+                                <div class="item-img-info">
+                                    <a href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)" title="@item.PrName" class="product-image">
+                                        <img src="@item.Images" alt="@item.PrName">
+                                    </a>
+                                    @if (item.IsSale)
                                                 {
-                                                    <div class="sale-label sale-top-right">Sale</div>
+                                                <div class="sale-label sale-top-right">Sale</div>
                                                 }
                                                 else
                                                 {
-                                                    <div class="new-label new-top-left">Mới</div>
+                                                <div class="new-label new-top-left">Mới</div>
                                                 }
-                                            </div>
-                                        </div>
-                                        <div class="item-info">
-                                            <div class="info-inner">
-                                                <div class="item-title">
-                                                    <a href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)" title="@item.PrName">@item.PrName</a>
-                                                </div>
-                                                <div class="item-content">
-                                                    <div class="hTag">@item.Tag</div>                                                  
-                                                    <div class="item-price">
-                                                        <div class="price-box">
-                                                            <span class="regular-price" id="product-price-1">
-                                                                @if (item.IsSale)
+                                </div>
+                            </div>
+                            <div class="item-info">
+                                <div class="info-inner">
+                                    <div class="item-title">
+                                        <a href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)" title="@item.PrName">@item.PrName</a>
+                                    </div>
+                                    <div class="item-content">
+                                        <div class="hTag">@item.Tag</div>
+                                        <div class="item-price">
+                                            <div class="price-box">
+                                                <span class="regular-price" id="product-price-1">
+                                                    @if (item.IsSale)
                                                                 {
-                                                                    <span class="price old-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price) đ</span>
-                                                                    <span class="special-price price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.SalePrice) đ</span>
+                                                                <span class="price old-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price) đ</span>
+                                                                <span class="special-price price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.SalePrice) đ</span>
                                                                 }
                                                                 else
                                                                 {
-                                                                    <span class="price">@(item.Price == 0 ? "liên hệ" : Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price) + " đ")</span>
+                                                                <span class="price">@(item.Price == 0 ? "liên hệ" : Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price) + " đ")</span>
                                                                 }
-                                                            </span>
-                                                        </div>
-                                                    </div>
-                                                    <div class="add_cart">
-                                                        <a class="button btn-cart" href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)" title="@item.PrName">Xem thêm</a>                                                      
-                                                        <button class="button btn-cart" type="button" onclick="Cart.addProduct(@item.Id,'@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price)','@item.Images','@item.PrName');"><span>Mua hàng</span></button>
-                                                    </div>
-                                                </div>
+                                                </span>
                                             </div>
                                         </div>
+                                        <div class="add_cart">
+                                            <a class="button btn-cart" href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)" title="@item.PrName">Xem thêm</a>
+                                            <button class="button btn-cart" type="button" onclick="Cart.addProduct(@item.Id,'@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price)','@item.Images','@item.PrName');"><span>Mua hàng</span></button>
+                                        </div>
                                     </div>
-                                </li>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
                             }
                         }
                     }
@@ -126,47 +126,48 @@
                                                 </a>
                                                 @if (item.IsSale)
                                                 {
-                                                    <div class="sale-label sale-top-right">Sale</div>
+                                                <div class="sale-label sale-top-right">Sale</div>
                                                 }
                                                 else
                                                 {
-                                                    <div class="new-label new-top-left">Mới</div>
-                                                }                                               
+                                                <div class="new-label new-top-left">Mới</div>
+                                                }
                                             </div>
                                         </div>
                                         <div class="item-info">
                                             <div class="info-inner">
                                                 <div class="item-title">
-                                                    <a href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)" title="@item.PrName">@item.PrName</a> 
+                                                    <a href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)" title="@item.PrName">@item.PrName</a>
                                                 </div>
                                                 <div class="item-content">
-                                                    <div class="hTag">@item.Tag</div>                                                        
-                                                    <div class="Specifications"><a href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)" title="@item.PrName">@item.Specifications</a></div>                                                                                                          
+                                                    <div class="hTag">@item.Tag</div>
+                                                    <div class="Specifications"><a href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)" title="@item.PrName">@item.Specifications</a></div>
                                                     <div class="item-price">
                                                         <div class="price-box">
                                                             <span class="regular-price" id="product-price-1">
                                                                 @if (item.IsSale)
                                                                 {
-                                                                    <span class="price old-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price) đ</span> 
-                                                                    <span class="special-price price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.SalePrice) đ</span> 
+                                                                <span class="price old-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price) đ</span>
+                                                                <span class="special-price price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.SalePrice) đ</span>
                                                                 }
                                                                 else
                                                                 {
-                                                                    <span class="price">@(item.Price == 0 ? "liên hệ" : Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price) +" đ")</span> 
+                                                                <span class="price">@(item.Price == 0 ? "liên hệ" : Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price) +" đ")</span>
                                                                 }
-                                                            </span> 
+                                                            </span>
                                                         </div>
                                                     </div>
                                                     <div class="add_cart">
                                                         <a class="button btn-cart" href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)" title="@item.PrName">Xem thêm</a>
-                                                       @if (item.IsInstock)
+                                                        @if (item.IsInstock)
                                                        {
-                                                        <button class="button btn-cart" type="button" onclick="Cart.addProduct(@item.Id,'@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price)','@item.Images','@item.PrName');"><span>Mua hàng</span></button>
+                                                    <button class="button btn-cart" type="button" onclick="Cart.addProduct(@item.Id,'@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price)','@item.Images','@item.PrName');"><span>Mua hàng</span></button>
                                                        }
                                                        else
                                                        {
-                                                        <button class="button btn-cart" type="button" onclick="javascript:void(0);"><span>Hết Hàng</span></button>
-                                                       }</div>
+                                                    <button class="button btn-cart" type="button" onclick="javascript:void(0);"><span>Hết Hàng</span></button>
+                                                       }
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
@@ -179,41 +180,37 @@
             </div>
         </div>
     </section>
-    @*@if (ViewData["FeatureArticle"] != null)
-    {
-        SearchArticleResults FeatureArticle = (SearchArticleResults)ViewData["FeatureArticle"];
-        <div class="latest-blog wow bounceInUp animated animated container">        
+    <section class="wow bounceInUp animated">
+        <div class="best-pro slider-items-products container" style="margin-top: 50px;">
             <div class="new_title">
-                <h2>Bài viết mới nhất</h2>
-            </div>   
-            @foreach (BlogItem item in FeatureArticle.ItemList)
+                <h2>TRANG TRÍ NỘI THẤT</h2>
+            </div>
+            <div class="slider-items">
+                @if (ViewData["ads1"] != null)
             {
-                <div class="col-lg-4 col-md-4 col-xs-12 col-sm-4 blog-post">
-                    <div class="blog_inner">
-                        <div class="blog-img">
-                            <a href="@Anpero.StringHelpper.GetArticleLink(item.Title,item.Id)"> <img src="@item.Thumb" alt="@item.ShotDesc"> </a>
-                            <div class="mask"> <a class="info" href="@Anpero.StringHelpper.GetArticleLink(item.Title,item.Id)">Chi tiết</a> </div>
-                        </div>
-                        <div class="blog-info">
-                            <div class="post-date">
-                                <time class="entry-date" datetime="@item.CreateDate">mới đăng</time>
+                Ads[] slide = (Ads[])ViewData["ads1"];
+                if (slide.Length > 0)
+                {
+                    for (int i = 0; i < slide.Length; i++)
+                    {
+                            <div class="item">
+                                <a href="@slide[i].ClickUrl" target="_blank"><img src="@slide[i].ImagesUrl" alt="@slide[i].Description"></a>
                             </div>
-                            <h3><a href="@Anpero.StringHelpper.GetArticleLink(item.Title,item.Id)">@item.Title</a></h3>
-                            <p>@Anpero.StringHelpper.SubString(150,item.ShotDesc)</p>
-                            <a class="readmore" href="@Anpero.StringHelpper.GetArticleLink(item.Title,item.Id)">Xem thêm</a>
-                        </div>
-                    </div>
-                </div>
-            }
+                        }
+                    }
+                }
+            </div>
         </div>
-    }*@
+    </section>
+ 
+
 </div>
 @section scripts{
-<script type="text/javascript" src="/assets/js/jquery.bxslider.min.js"></script>
-<script type="text/javascript" src="/assets/js/revslider.js"></script>
-<script type="text/javascript">
-    jQuery(document).ready(function () {
-        $(".item-img").height($(".item-img").width());
+    <script type="text/javascript" src="/assets/js/jquery.bxslider.min.js"></script>
+    <script type="text/javascript" src="/assets/js/revslider.js"></script>
+    <script type="text/javascript">
+        jQuery(document).ready(function () {
+            $(".item-img").height($(".item-img").width());
             jQuery('#thm-rev-slider').show().revolution({
                 dottedOverlay: 'none',
                 delay: 5000,
@@ -283,7 +280,7 @@
                 fullScreenOffsetContainer: ''
             });
         });
-</script>
+    </script>
 }
 
 
