--- a/10_Theme_09_v2/assets/stylesheet/style.css
+++ b/10_Theme_09_v2/assets/stylesheet/style.css
@@ -4122,7 +4122,7 @@ ul.pdt-list li.item a img.image-hover {
     .regular-price .price {
         font-weight: bold;
         font-size: 13px;
-        color: #000;
+        color: #f1c40d;
     }
 
 .block .regular-price, .block .regular-price .price {
